--- a/config.yaml
+++ b/config.yaml
@@ -4,16 +4,17 @@
 models:
   blip2:
     model_name: "Salesforce/blip2-opt-2.7b"
-    device: "cuda"  # or "cpu"
+    device: "cuda:0"  # or "cpu"
   
   whisper:
     model_name: "base"  # tiny, base, small, medium, large
-    device: "cuda"
+    device: "cuda:0"
   
   t5:
     model_name: "t5-base"  # t5-small, t5-base, t5-large
     max_input_length: 1024
     max_output_length: 256
+    device: "cuda:1"
 
 # Video processing
 video_processing:
